--- a/README
+++ b/README
@@ -3,24 +3,24 @@ gstreamer010-plugins-base
 A collection of plugins for the GStreamer media framework.
 
 Runtime requirements:
-  cygwin-1.5.20-1
+  cygwin-1.5.21-2
   alternatives-1.3.20a-2
   glib2-2.10.3-1
-  gstreamer010-0.10.9-1
+  gstreamer010-0.10.10-1
   liboil03-0.3.9-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.20-1
+  cygwin-1.5.21-2
   autoconf2.5-2.59-2
   automake1.9-1.9.6-1
-  binutils-20050610-1
-  cygport-0.2.3-1
+  binutils-20060709-1
+  cygport-0.2.5-1
   gawk-3.1.5-2
   gcc-core-3.4.4-1
   gtk-doc-1.5-1
   libtool1.5-1.5.22-1
-  make-3.80-1
+  make-3.81-1
   pkg-config-0.20-1
   python-2.4.3-1
   pyxml-0.8.4-1
@@ -35,17 +35,17 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gstreamer010-plugins-base-0.10.9-1-src.tar.bz2
+  unpack gstreamer010-plugins-base-0.10.10-1-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gstreamer010-plugins-base-0.10.9-1.sh all
+  cygport ./gstreamer010-plugins-base-0.10.10-1.sh all
 
 This will create:
-  /usr/src/gstreamer010-plugins-base-0.10.9-1-src.tar.bz2
-  /usr/src/gstreamer010-plugins-base-0.10.9-1.tar.bz2
-  /usr/src/gstreamer010-plugins-base-devel-0.10.9-1.tar.bz2
-  /usr/src/gstreamer010-plugins-base-doc-0.10.9-1.tar.bz2
+  /usr/src/gstreamer010-plugins-base-0.10.10-1-src.tar.bz2
+  /usr/src/gstreamer010-plugins-base-0.10.10-1.tar.bz2
+  /usr/src/gstreamer010-plugins-base-devel-0.10.10-1.tar.bz2
+  /usr/src/gstreamer010-plugins-base-doc-0.10.10-1.tar.bz2
 
 -------------------------------------------
 
@@ -92,15 +92,15 @@ Files included in the main package:
   /usr/lib/gstreamer-0.10/libgstvideoscale.la
   /usr/lib/gstreamer-0.10/libgstvideotestsrc.la
   /usr/lib/gstreamer-0.10/libgstvolume.la
-  /usr/share/doc/Cygwin/gstreamer010-plugins-base-0.10.9.README
-  /usr/share/doc/gstreamer010-plugins-base-0.10.9/ABOUT-NLS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.9/AUTHORS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.9/COPYING
-  /usr/share/doc/gstreamer010-plugins-base-0.10.9/COPYING.LIB
-  /usr/share/doc/gstreamer010-plugins-base-0.10.9/ChangeLog
-  /usr/share/doc/gstreamer010-plugins-base-0.10.9/INSTALL
-  /usr/share/doc/gstreamer010-plugins-base-0.10.9/NEWS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.9/README
+  /usr/share/doc/Cygwin/gstreamer010-plugins-base-0.10.10.README
+  /usr/share/doc/gstreamer010-plugins-base-0.10.10/ABOUT-NLS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.10/AUTHORS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.10/COPYING
+  /usr/share/doc/gstreamer010-plugins-base-0.10.10/COPYING.LIB
+  /usr/share/doc/gstreamer010-plugins-base-0.10.10/ChangeLog
+  /usr/share/doc/gstreamer010-plugins-base-0.10.10/INSTALL
+  /usr/share/doc/gstreamer010-plugins-base-0.10.10/NEWS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.10/README
   /usr/share/locale/af/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/az/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/cs/LC_MESSAGES/gst-plugins-base-0.10.mo
@@ -272,6 +272,9 @@ Files included in the doc package:
 ------------------
 
 Port Notes:
+
+----- version 0.10.10-1 -----
+Version bump.
 
 ----- version 0.10.9-1 -----
 Version bump.
