--- a/README
+++ b/README
@@ -3,12 +3,14 @@ gstreamer010-plugins-base
 A collection of plugins for the GStreamer media framework.
 
 Runtime requirements:
-  cygwin-1.5.22-1
+  cygwin-1.5.24-2
   alternatives-1.3.29a-1
-  glib2-2.12.4-1
-  gstreamer010-0.10.11-1
+  glib2-2.12.9-1
+  gstreamer010-0.10.12-1
   liboil03-0.3.10-1
 
+(cdparanoia)
+  libcdio7-0.78.2-1
 (gnome_vfs)
   gnome-vfs2-2.16.2-1
 (libvisual)
@@ -16,31 +18,27 @@ Runtime requirements:
 (ogg)
   libogg0-1.1.2-1
 (pango)
-  pango-1.14.9-1
+  pango-1.14.10-1
 (theora)
-  libtheora0-1.0alpha5-1
+  libtheora0-1.0alpha7-1
 (vorbis)
   libvorbis0-1.1.1-1
   libvorbisenc2-1.1.1-1
 (ximage)
   libX11_6-1.1.1-1
   libXext6-1.0.2-1
-(xvimage)
-  libX11_6-1.1.1-1
-  libXext6-1.0.2-1
-  libXv1-1.0.2-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.22-1
-  autoconf2.5-2.60-2
-  automake1.9-1.9.6-1
+  cygwin-1.5.24-2
+  autoconf2.5-2.61-1
+  automake1.9-1.9.6-2
   binutils-20060817-1
-  cygport-0.2.7-1
-  gawk-3.1.5-2
-  gcc-core-3.4.4-1
+  cygport-0.3.0-1
+  gawk-3.1.5-4
+  gcc-core-3.4.4-3
   gtk-doc-1.7-1
-  libtool1.5-1.5.23a-1
+  libtool1.5-1.5.23a-2
   make-3.81-1
   pkg-config-0.21-1
   python-2.4.3-1
@@ -68,6 +66,7 @@ This will create:
   /usr/src/gstreamer010-plugins-base-devel-0.10.11-X.tar.bz2
   /usr/src/gstreamer010-plugins-base-doc-0.10.11-X.tar.bz2
 
+  /usr/src/gstreamer010-plugins-cdparanoia-0.10.11-X.tar.bz2
   /usr/src/gstreamer010-plugins-gnome_vfs-0.10.11-X.tar.bz2
   /usr/src/gstreamer010-plugins-libvisual-0.10.11-X.tar.bz2
   /usr/src/gstreamer010-plugins-ogg-0.10.11-X.tar.bz2
@@ -75,7 +74,6 @@ This will create:
   /usr/src/gstreamer010-plugins-theora-0.10.11-X.tar.bz2
   /usr/src/gstreamer010-plugins-vorbis-0.10.11-X.tar.bz2
   /usr/src/gstreamer010-plugins-ximage-0.10.11-X.tar.bz2
-  /usr/src/gstreamer010-plugins-xvimage-0.10.11-X.tar.bz2
 
 -------------------------------------------
 
@@ -88,6 +86,7 @@ Files included in the binary packages:
   /usr/bin/cyggstcdda-0.10-0.dll
   /usr/bin/cyggstinterfaces-0.10-0.dll
   /usr/bin/cyggstnetbuffer-0.10-0.dll
+  /usr/bin/cyggstpbutils-0.10-0.dll
   /usr/bin/cyggstriff-0.10-0.dll
   /usr/bin/cyggstrtp-0.10-0.dll
   /usr/bin/cyggsttag-0.10-0.dll
@@ -127,18 +126,19 @@ Files included in the binary packages:
   /usr/lib/gstreamer-0.10/libgstvideoscale.la
   /usr/lib/gstreamer-0.10/libgstvideotestsrc.la
   /usr/lib/gstreamer-0.10/libgstvolume.la
-  /usr/share/doc/Cygwin/gstreamer010-plugins-base-0.10.11.README
-  /usr/share/doc/gstreamer010-plugins-base-0.10.11/ABOUT-NLS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.11/AUTHORS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.11/COPYING
-  /usr/share/doc/gstreamer010-plugins-base-0.10.11/COPYING.LIB
-  /usr/share/doc/gstreamer010-plugins-base-0.10.11/ChangeLog
-  /usr/share/doc/gstreamer010-plugins-base-0.10.11/INSTALL
-  /usr/share/doc/gstreamer010-plugins-base-0.10.11/NEWS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.11/README
+  /usr/share/doc/Cygwin/gstreamer010-plugins-base-0.10.12.README
+  /usr/share/doc/gstreamer010-plugins-base-0.10.12/ABOUT-NLS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.12/AUTHORS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.12/COPYING
+  /usr/share/doc/gstreamer010-plugins-base-0.10.12/COPYING.LIB
+  /usr/share/doc/gstreamer010-plugins-base-0.10.12/ChangeLog
+  /usr/share/doc/gstreamer010-plugins-base-0.10.12/INSTALL
+  /usr/share/doc/gstreamer010-plugins-base-0.10.12/NEWS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.12/README
   /usr/share/locale/af/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/az/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/cs/LC_MESSAGES/gst-plugins-base-0.10.mo
+  /usr/share/locale/de/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/en_GB/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/hu/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/it/LC_MESSAGES/gst-plugins-base-0.10.mo
@@ -151,6 +151,10 @@ Files included in the binary packages:
   /usr/share/locale/uk/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/vi/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/man/man1/gst-visualise-0.10.1.gz
+
+(gstreamer010-plugins-cdparanoia)
+  /usr/lib/gstreamer-0.10/cyggstcdparanoia.dll
+  /usr/lib/gstreamer-0.10/libgstcdparanoia.la
 
 (gstreamer010-plugins-gnome_vfs)
   /usr/lib/gstreamer-0.10/cyggstgnomevfs.dll
@@ -180,10 +184,6 @@ Files included in the binary packages:
   /usr/lib/gstreamer-0.10/cyggstximagesink.dll
   /usr/lib/gstreamer-0.10/libgstximagesink.la
 
-(gstreamer010-plugins-xvimage)
-  /usr/lib/gstreamer-0.10/cyggstxvimagesink.dll
-  /usr/lib/gstreamer-0.10/libgstxvimagesink.la
-
 (gstreamer010-plugins-base-devel)
   /usr/include/gstreamer-0.10/gst/audio/audio.h
   /usr/include/gstreamer-0.10/gst/audio/gstaudioclock.h
@@ -209,11 +209,17 @@ Files included in the binary packages:
   /usr/include/gstreamer-0.10/gst/interfaces/tuner.h
   /usr/include/gstreamer-0.10/gst/interfaces/tunerchannel.h
   /usr/include/gstreamer-0.10/gst/interfaces/tunernorm.h
+  /usr/include/gstreamer-0.10/gst/interfaces/videoorientation.h
   /usr/include/gstreamer-0.10/gst/interfaces/xoverlay.h
   /usr/include/gstreamer-0.10/gst/netbuffer/gstnetbuffer.h
+  /usr/include/gstreamer-0.10/gst/pbutils/descriptions.h
+  /usr/include/gstreamer-0.10/gst/pbutils/install-plugins.h
+  /usr/include/gstreamer-0.10/gst/pbutils/missing-plugins.h
+  /usr/include/gstreamer-0.10/gst/pbutils/pbutils.h
   /usr/include/gstreamer-0.10/gst/riff/riff-ids.h
   /usr/include/gstreamer-0.10/gst/riff/riff-media.h
   /usr/include/gstreamer-0.10/gst/riff/riff-read.h
+  /usr/include/gstreamer-0.10/gst/rtp/gstbasertpaudiopayload.h
   /usr/include/gstreamer-0.10/gst/rtp/gstbasertpdepayload.h
   /usr/include/gstreamer-0.10/gst/rtp/gstbasertppayload.h
   /usr/include/gstreamer-0.10/gst/rtp/gstrtpbuffer.h
@@ -229,6 +235,8 @@ Files included in the binary packages:
   /usr/lib/libgstinterfaces-0.10.la
   /usr/lib/libgstnetbuffer-0.10.dll.a
   /usr/lib/libgstnetbuffer-0.10.la
+  /usr/lib/libgstpbutils-0.10.dll.a
+  /usr/lib/libgstpbutils-0.10.la
   /usr/lib/libgstriff-0.10.dll.a
   /usr/lib/libgstriff-0.10.la
   /usr/lib/libgstrtp-0.10.dll.a
@@ -240,6 +248,69 @@ Files included in the binary packages:
   /usr/lib/pkgconfig/gstreamer-plugins-base-0.10.pc
 
 (gstreamer010-plugins-base-doc)
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/api-index.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/compiling.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-0.10.devhelp
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-0.10.devhelp2
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstaudio.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstaudioclock.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstaudiofilter.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstaudiomixerutils.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstaudiosink.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstaudiosrc.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstbaseaudiosink.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstbaseaudiosrc.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstbasertpaudiopayload.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstbasertpdepayload.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstbasertppayload.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstcddabasesrc.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstcolorbalance.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstcolorbalancechannel.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstfloatcast.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstmixer.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstmixeroptions.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstmixertrack.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstmultichannel.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstnavigation.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstnetbuffer.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstpbutils.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstpbutilsdescriptions.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstpbutilsinstallplugins.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstpbutilsmissingplugins.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstpropertyprobe.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstriff.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstringbuffer.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstrtpbuffer.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttag.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttagid3.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttagvorbis.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttuner.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttunerchannel.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gsttunernorm.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstvideo.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstvideofilter.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstvideoorientation.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstvideosink.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-gstxoverlay.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-audio.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-base-utils.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-cdda.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-floatcast.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-interfaces.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-libs-hierarchy.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-netbuffer.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-plugins-base.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-riff.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-rtp.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-tag.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gstreamer-video.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/home.png
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/index.html
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/index.sgml
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/left.png
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/right.png
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/style.css
+  /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/up.png
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/ch01.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/ch02.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-0.10.devhelp
@@ -252,12 +323,14 @@ Files included in the binary packages:
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-audiotestsrc.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-cdparanoiasrc.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-clockoverlay.html
+  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-decodebin2.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-ffmpegcolorspace.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-gdpdepay.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-gdppay.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-gnomevfssink.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-gnomevfssrc.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-multifdsink.html
+  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-oggdemux.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-playbin.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-adder.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-alsa.html
@@ -267,6 +340,7 @@ Files included in the binary packages:
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-audiotestsrc.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-cdparanoia.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-decodebin.html
+  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-decodebin2.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-ffmpegcolorspace.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-gdp.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-plugin-gnomevfs.html
@@ -299,6 +373,7 @@ Files included in the binary packages:
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-vorbisdec.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-vorbisenc.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-vorbisparse.html
+  /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-vorbistag.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-ximagesink.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/gst-plugins-base-plugins-xvimagesink.html
   /usr/share/gtk-doc/html/gst-plugins-base-plugins-0.10/home.png
@@ -312,6 +387,11 @@ Files included in the binary packages:
 ------------------
 
 Port Notes:
+
+----- version 0.10.12-1 -----
+Version bump.
+Added: cdparanoia
+Removed: xvimage
 
 ----- version 0.10.11-1 -----
 Version bump.
