--- a/README
+++ b/README
@@ -5,9 +5,9 @@ A collection of plugins for the GStreamer media framework.
 Runtime requirements:
   cygwin-1.5.24-2
   alternatives-1.3.29a-1
-  glib2-2.12.9-1
-  gstreamer010-0.10.12-1
-  liboil03-0.3.10-1
+  glib2-2.12.12-1
+  gstreamer010-0.10.13-1
+  liboil03-0.3.12-1
 
 (cdparanoia)
   libcdio7-0.78.2-1
@@ -18,9 +18,9 @@ Runtime requirements:
 (ogg)
   libogg0-1.1.2-1
 (pango)
-  pango-1.14.10-1
+  pango-1.16.4-1
 (theora)
-  libtheora0-1.0alpha7-1
+  libtheora0-1.0alpha7-2
 (vorbis)
   libvorbis0-1.1.1-1
   libvorbisenc2-1.1.1-1
@@ -34,15 +34,15 @@ Build requirements:
   autoconf2.5-2.61-1
   automake1.9-1.9.6-2
   binutils-20060817-1
-  cygport-0.3.0-1
+  cygport-0.3.1-1
   gawk-3.1.5-4
   gcc-core-3.4.4-3
-  gtk-doc-1.7-1
+  gtk-doc-1.8-1
   libtool1.5-1.5.23a-2
   make-3.81-1
   pkg-config-0.21-1
-  python-2.4.3-1
-  pyxml-0.8.4-1
+  python-2.5.1-1
+  python-xml-0.8.4-2
   sed-4.1.5-2
 
 Canonical website:
@@ -54,26 +54,24 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gstreamer010-plugins-base-0.10.11-X-src.tar.bz2
+  unpack gstreamer010-plugins-base-0.10.13-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gstreamer010-plugins-base-0.10.11-X.cygport all
+  cygport ./gstreamer010-plugins-base-0.10.13-X.cygport all
 
 This will create:
-  /usr/src/gstreamer010-plugins-base-0.10.11-X-src.tar.bz2
-  /usr/src/gstreamer010-plugins-base-0.10.11-X.tar.bz2
-  /usr/src/gstreamer010-plugins-base-devel-0.10.11-X.tar.bz2
-  /usr/src/gstreamer010-plugins-base-doc-0.10.11-X.tar.bz2
-
-  /usr/src/gstreamer010-plugins-cdparanoia-0.10.11-X.tar.bz2
-  /usr/src/gstreamer010-plugins-gnome_vfs-0.10.11-X.tar.bz2
-  /usr/src/gstreamer010-plugins-libvisual-0.10.11-X.tar.bz2
-  /usr/src/gstreamer010-plugins-ogg-0.10.11-X.tar.bz2
-  /usr/src/gstreamer010-plugins-pango-0.10.11-X.tar.bz2
-  /usr/src/gstreamer010-plugins-theora-0.10.11-X.tar.bz2
-  /usr/src/gstreamer010-plugins-vorbis-0.10.11-X.tar.bz2
-  /usr/src/gstreamer010-plugins-ximage-0.10.11-X.tar.bz2
+  /usr/src/gstreamer010-plugins-base-0.10.13-X-src.tar.bz2
+  /usr/src/gstreamer010-plugins-base-0.10.13-X.tar.bz2
+  /usr/src/gstreamer010-plugins-base-devel-0.10.13-X.tar.bz2
+  /usr/src/gstreamer010-plugins-cdparanoia-0.10.13-X.tar.bz2
+  /usr/src/gstreamer010-plugins-gnome_vfs-0.10.13-X.tar.bz2
+  /usr/src/gstreamer010-plugins-libvisual-0.10.13-X.tar.bz2
+  /usr/src/gstreamer010-plugins-ogg-0.10.13-X.tar.bz2
+  /usr/src/gstreamer010-plugins-pango-0.10.13-X.tar.bz2
+  /usr/src/gstreamer010-plugins-theora-0.10.13-X.tar.bz2
+  /usr/src/gstreamer010-plugins-vorbis-0.10.13-X.tar.bz2
+  /usr/src/gstreamer010-plugins-ximage-0.10.13-X.tar.bz2
 
 -------------------------------------------
 
@@ -102,9 +100,11 @@ Files included in the binary packages:
   /usr/lib/gstreamer-0.10/cyggstffmpegcolorspace.dll
   /usr/lib/gstreamer-0.10/cyggstgdp.dll
   /usr/lib/gstreamer-0.10/cyggstplaybin.dll
+  /usr/lib/gstreamer-0.10/cyggstqueue2.dll
   /usr/lib/gstreamer-0.10/cyggstsubparse.dll
   /usr/lib/gstreamer-0.10/cyggsttcp.dll
   /usr/lib/gstreamer-0.10/cyggsttypefindfunctions.dll
+  /usr/lib/gstreamer-0.10/cyggsturidecodebin.dll
   /usr/lib/gstreamer-0.10/cyggstvideorate.dll
   /usr/lib/gstreamer-0.10/cyggstvideoscale.dll
   /usr/lib/gstreamer-0.10/cyggstvideotestsrc.dll
@@ -119,22 +119,24 @@ Files included in the binary packages:
   /usr/lib/gstreamer-0.10/libgstffmpegcolorspace.la
   /usr/lib/gstreamer-0.10/libgstgdp.la
   /usr/lib/gstreamer-0.10/libgstplaybin.la
+  /usr/lib/gstreamer-0.10/libgstqueue2.la
   /usr/lib/gstreamer-0.10/libgstsubparse.la
   /usr/lib/gstreamer-0.10/libgsttcp.la
   /usr/lib/gstreamer-0.10/libgsttypefindfunctions.la
+  /usr/lib/gstreamer-0.10/libgsturidecodebin.la
   /usr/lib/gstreamer-0.10/libgstvideorate.la
   /usr/lib/gstreamer-0.10/libgstvideoscale.la
   /usr/lib/gstreamer-0.10/libgstvideotestsrc.la
   /usr/lib/gstreamer-0.10/libgstvolume.la
-  /usr/share/doc/Cygwin/gstreamer010-plugins-base-0.10.12.README
-  /usr/share/doc/gstreamer010-plugins-base-0.10.12/ABOUT-NLS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.12/AUTHORS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.12/COPYING
-  /usr/share/doc/gstreamer010-plugins-base-0.10.12/COPYING.LIB
-  /usr/share/doc/gstreamer010-plugins-base-0.10.12/ChangeLog
-  /usr/share/doc/gstreamer010-plugins-base-0.10.12/INSTALL
-  /usr/share/doc/gstreamer010-plugins-base-0.10.12/NEWS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.12/README
+  /usr/share/doc/Cygwin/gstreamer010-plugins-base-0.10.13.README
+  /usr/share/doc/gstreamer010-plugins-base-0.10.13/ABOUT-NLS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.13/AUTHORS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.13/COPYING
+  /usr/share/doc/gstreamer010-plugins-base-0.10.13/COPYING.LIB
+  /usr/share/doc/gstreamer010-plugins-base-0.10.13/ChangeLog
+  /usr/share/doc/gstreamer010-plugins-base-0.10.13/INSTALL
+  /usr/share/doc/gstreamer010-plugins-base-0.10.13/NEWS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.13/README
   /usr/share/locale/af/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/az/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/cs/LC_MESSAGES/gst-plugins-base-0.10.mo
@@ -246,8 +248,6 @@ Files included in the binary packages:
   /usr/lib/libgstvideo-0.10.dll.a
   /usr/lib/libgstvideo-0.10.la
   /usr/lib/pkgconfig/gstreamer-plugins-base-0.10.pc
-
-(gstreamer010-plugins-base-doc)
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/api-index.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/compiling.html
   /usr/share/gtk-doc/html/gst-plugins-base-libs-0.10/gst-plugins-base-libs-0.10.devhelp
@@ -387,6 +387,9 @@ Files included in the binary packages:
 ------------------
 
 Port Notes:
+
+----- version 0.10.13-1 -----
+Version bump.
 
 ----- version 0.10.12-1 -----
 Version bump.
