--- a/README
+++ b/README
@@ -5,28 +5,29 @@ A collection of plugins for the GStreamer media framework.
 Runtime requirements:
   cygwin-1.5.24-2
   alternatives-1.3.29a-1
-  glib2-2.12.12-1
-  gstreamer010-0.10.13-1
-  liboil03-0.3.12-1
+  glib2-2.12.13-1
+  gstreamer010-0.10.14-1
+  libintl8-0.15-1
+  liboil03-0.3.11-2
 
 (cdparanoia)
   libcdio7-0.78.2-1
 (gnome_vfs)
-  gnome-vfs2-2.16.2-1
+  gnome-vfs2-2.18.1-1
 (libvisual)
   libvisual04-0.4.0-1
 (ogg)
-  libogg0-1.1.2-1
+  libogg0-1.1.3-1
 (pango)
-  pango-1.16.4-1
+  pango-1.16.5-1
 (theora)
-  libtheora0-1.0alpha7-2
+  libtheora0-1.0beta2-1
 (vorbis)
-  libvorbis0-1.1.1-1
-  libvorbisenc2-1.1.1-1
+  libvorbis0-1.2.0-1
+  libvorbisenc2-1.2.0-1
 (ximage)
-  libX11_6-1.1.1-1
-  libXext6-1.0.2-1
+  libX11_6-1.1.3-1
+  libXext6-1.0.3-1
 
 Build requirements:
 (besides corresponding -devel packages)
@@ -34,14 +35,14 @@ Build requirements:
   autoconf2.5-2.61-1
   automake1.9-1.9.6-2
   binutils-20060817-1
-  cygport-0.3.1-1
+  cygport-0.3.6-1
   gawk-3.1.5-4
   gcc-core-3.4.4-3
-  gtk-doc-1.8-1
+  gtk-doc-1.9-1
   libtool1.5-1.5.23a-2
   make-3.81-1
   pkg-config-0.21-1
-  python-2.5.1-1
+  python-2.5.1-3
   python-xml-0.8.4-2
   sed-4.1.5-2
 
@@ -54,24 +55,24 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gstreamer010-plugins-base-0.10.13-X-src.tar.bz2
+  unpack gstreamer010-plugins-base-0.10.14-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gstreamer010-plugins-base-0.10.13-X.cygport all
+  cygport ./gstreamer010-plugins-base-0.10.14-X.cygport all
 
 This will create:
-  /usr/src/gstreamer010-plugins-base-0.10.13-X-src.tar.bz2
-  /usr/src/gstreamer010-plugins-base-0.10.13-X.tar.bz2
-  /usr/src/gstreamer010-plugins-base-devel-0.10.13-X.tar.bz2
-  /usr/src/gstreamer010-plugins-cdparanoia-0.10.13-X.tar.bz2
-  /usr/src/gstreamer010-plugins-gnome_vfs-0.10.13-X.tar.bz2
-  /usr/src/gstreamer010-plugins-libvisual-0.10.13-X.tar.bz2
-  /usr/src/gstreamer010-plugins-ogg-0.10.13-X.tar.bz2
-  /usr/src/gstreamer010-plugins-pango-0.10.13-X.tar.bz2
-  /usr/src/gstreamer010-plugins-theora-0.10.13-X.tar.bz2
-  /usr/src/gstreamer010-plugins-vorbis-0.10.13-X.tar.bz2
-  /usr/src/gstreamer010-plugins-ximage-0.10.13-X.tar.bz2
+  /usr/src/gstreamer010-plugins-base-0.10.14-X-src.tar.bz2
+  /usr/src/gstreamer010-plugins-base-0.10.14-X.tar.bz2
+  /usr/src/gstreamer010-plugins-base-devel-0.10.14-X.tar.bz2
+  /usr/src/gstreamer010-plugins-cdparanoia-0.10.14-X.tar.bz2
+  /usr/src/gstreamer010-plugins-gnome_vfs-0.10.14-X.tar.bz2
+  /usr/src/gstreamer010-plugins-libvisual-0.10.14-X.tar.bz2
+  /usr/src/gstreamer010-plugins-ogg-0.10.14-X.tar.bz2
+  /usr/src/gstreamer010-plugins-pango-0.10.14-X.tar.bz2
+  /usr/src/gstreamer010-plugins-theora-0.10.14-X.tar.bz2
+  /usr/src/gstreamer010-plugins-vorbis-0.10.14-X.tar.bz2
+  /usr/src/gstreamer010-plugins-ximage-0.10.14-X.tar.bz2
 
 -------------------------------------------
 
@@ -128,15 +129,15 @@ Files included in the binary packages:
   /usr/lib/gstreamer-0.10/libgstvideoscale.la
   /usr/lib/gstreamer-0.10/libgstvideotestsrc.la
   /usr/lib/gstreamer-0.10/libgstvolume.la
-  /usr/share/doc/Cygwin/gstreamer010-plugins-base-0.10.13.README
-  /usr/share/doc/gstreamer010-plugins-base-0.10.13/ABOUT-NLS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.13/AUTHORS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.13/COPYING
-  /usr/share/doc/gstreamer010-plugins-base-0.10.13/COPYING.LIB
-  /usr/share/doc/gstreamer010-plugins-base-0.10.13/ChangeLog
-  /usr/share/doc/gstreamer010-plugins-base-0.10.13/INSTALL
-  /usr/share/doc/gstreamer010-plugins-base-0.10.13/NEWS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.13/README
+  /usr/share/doc/Cygwin/gstreamer010-plugins-base-0.10.14.README
+  /usr/share/doc/gstreamer010-plugins-base-0.10.14/ABOUT-NLS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.14/AUTHORS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.14/COPYING
+  /usr/share/doc/gstreamer010-plugins-base-0.10.14/COPYING.LIB
+  /usr/share/doc/gstreamer010-plugins-base-0.10.14/ChangeLog
+  /usr/share/doc/gstreamer010-plugins-base-0.10.14/INSTALL
+  /usr/share/doc/gstreamer010-plugins-base-0.10.14/NEWS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.14/README
   /usr/share/locale/af/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/az/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/cs/LC_MESSAGES/gst-plugins-base-0.10.mo
@@ -387,6 +388,9 @@ Files included in the binary packages:
 ------------------
 
 Port Notes:
+
+----- version 0.10.14-1 -----
+Version bump.
 
 ----- version 0.10.13-1 -----
 Version bump.
