--- a/README
+++ b/README
@@ -3,15 +3,15 @@ gstreamer010-plugins-base
 A collection of plugins for the GStreamer media framework.
 
 Runtime requirements:
-  cygwin-1.5.25-7
+  cygwin-1.5.25-11
   alternatives-1.3.29a-1
-  glib2-2.14.5-1
-  gstreamer010-0.10.17-1
+  glib2-2.14.6-1
+  gstreamer010-0.10.19-1
   libintl8-0.15-1
   liboil03-0.3.11-2
 
 (cdparanoia)
-  libcdio7-0.78.2-1
+  libcdio7-0.80.0-2
 (gnome_vfs)
   gnome-vfs2-2.20.1-1
 (libvisual)
@@ -31,18 +31,17 @@ Runtime requirements:
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.25-7
   autoconf2.5-2.61-1
   automake1.9-1.9.6-2
   binutils-20060817-1
-  cygport-0.3.7-1
+  cygport-0.3.10-1
   gawk-3.1.6-1
   gcc-core-3.4.4-3
   gtk-doc-1.9-1
-  libtool1.5-1.5.23a-2
+  libtool-2.2.2-2
   make-3.81-1
   pkg-config-0.21-1
-  python-2.5.1-3
+  python-2.5.2-1
   python-xml-0.8.4-2
   sed-4.1.5-2
 
@@ -55,24 +54,24 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gstreamer010-plugins-base-0.10.17-X-src.tar.bz2
+  unpack gstreamer010-plugins-base-0.10.19-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gstreamer010-plugins-base-0.10.17-X.cygport all
+  cygport ./gstreamer010-plugins-base-0.10.19-X.cygport all
 
 This will create:
-  /usr/src/gstreamer010-plugins-base-0.10.17-X-src.tar.bz2
-  /usr/src/gstreamer010-plugins-base-0.10.17-X.tar.bz2
-  /usr/src/gstreamer010-plugins-base-devel-0.10.17-X.tar.bz2
-  /usr/src/gstreamer010-plugins-cdparanoia-0.10.17-X.tar.bz2
-  /usr/src/gstreamer010-plugins-gnome_vfs-0.10.17-X.tar.bz2
-  /usr/src/gstreamer010-plugins-libvisual-0.10.17-X.tar.bz2
-  /usr/src/gstreamer010-plugins-ogg-0.10.17-X.tar.bz2
-  /usr/src/gstreamer010-plugins-pango-0.10.17-X.tar.bz2
-  /usr/src/gstreamer010-plugins-theora-0.10.17-X.tar.bz2
-  /usr/src/gstreamer010-plugins-vorbis-0.10.17-X.tar.bz2
-  /usr/src/gstreamer010-plugins-ximage-0.10.17-X.tar.bz2
+  /usr/src/gstreamer010-plugins-base-0.10.19-X-src.tar.bz2
+  /usr/src/gstreamer010-plugins-base-0.10.19-X.tar.bz2
+  /usr/src/gstreamer010-plugins-base-devel-0.10.19-X.tar.bz2
+  /usr/src/gstreamer010-plugins-cdparanoia-0.10.19-X.tar.bz2
+  /usr/src/gstreamer010-plugins-gnome_vfs-0.10.19-X.tar.bz2
+  /usr/src/gstreamer010-plugins-libvisual-0.10.19-X.tar.bz2
+  /usr/src/gstreamer010-plugins-ogg-0.10.19-X.tar.bz2
+  /usr/src/gstreamer010-plugins-pango-0.10.19-X.tar.bz2
+  /usr/src/gstreamer010-plugins-theora-0.10.19-X.tar.bz2
+  /usr/src/gstreamer010-plugins-vorbis-0.10.19-X.tar.bz2
+  /usr/src/gstreamer010-plugins-ximage-0.10.19-X.tar.bz2
 
 -------------------------------------------
 
@@ -130,14 +129,14 @@ Files included in the binary packages:
   /usr/lib/gstreamer-0.10/libgstvideoscale.la
   /usr/lib/gstreamer-0.10/libgstvideotestsrc.la
   /usr/lib/gstreamer-0.10/libgstvolume.la
-  /usr/share/doc/gstreamer010-plugins-base-0.10.17/ABOUT-NLS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.17/AUTHORS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.17/COPYING
-  /usr/share/doc/gstreamer010-plugins-base-0.10.17/COPYING.LIB
-  /usr/share/doc/gstreamer010-plugins-base-0.10.17/ChangeLog
-  /usr/share/doc/gstreamer010-plugins-base-0.10.17/INSTALL
-  /usr/share/doc/gstreamer010-plugins-base-0.10.17/NEWS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.17/README
+  /usr/share/doc/gstreamer010-plugins-base-0.10.19/ABOUT-NLS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.19/AUTHORS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.19/COPYING
+  /usr/share/doc/gstreamer010-plugins-base-0.10.19/COPYING.LIB
+  /usr/share/doc/gstreamer010-plugins-base-0.10.19/ChangeLog
+  /usr/share/doc/gstreamer010-plugins-base-0.10.19/INSTALL
+  /usr/share/doc/gstreamer010-plugins-base-0.10.19/NEWS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.19/README
   /usr/share/locale/af/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/az/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/bg/LC_MESSAGES/gst-plugins-base-0.10.mo
@@ -455,6 +454,9 @@ Files included in the binary packages:
 ------------------
 
 Port Notes:
+
+----- version 0.10.19-1 -----
+Version bump.
 
 ----- version 0.10.17-1 -----
 Version bump.
