--- a/README
+++ b/README
@@ -3,25 +3,25 @@ gstreamer010-plugins-base
 A collection of plugins for the GStreamer media framework.
 
 Runtime requirements:
-  cygwin-1.5.25-11
-  alternatives-1.3.29a-1
-  glib2-2.14.6-1
-  gstreamer010-0.10.19-1
+  cygwin-1.5.25-15
+  alternatives
+  glib2-2.16.3-1
+  gstreamer010-0.10.20-1
   libintl8-0.15-1
-  liboil03-0.3.11-2
+  liboil03-0.3.14-1
 
 (cdparanoia)
   libcdio7-0.80.0-2
 (gnome_vfs)
-  gnome-vfs2-2.20.1-1
+  gnome-vfs2-2.22.0-1
 (libvisual)
   libvisual04-0.4.0-1
 (ogg)
   libogg0-1.1.3-1
 (pango)
-  pango-1.18.4-1
+  pango-1.20.3-1
 (theora)
-  libtheora0-1.0beta2-1
+  libtheora0-1.0beta3-1
 (vorbis)
   libvorbis0-1.2.0-1
   libvorbisenc2-1.2.0-1
@@ -34,10 +34,10 @@ Build requirements:
   autoconf2.5-2.61-1
   automake1.9-1.9.6-2
   binutils-20060817-1
-  cygport-0.3.10-1
+  cygport-0.3.11-1
   gawk-3.1.6-1
   gcc-core-3.4.4-3
-  gtk-doc-1.9-1
+  gtk-doc-1.10-1
   libtool-2.2.2-2
   make-3.81-1
   pkg-config-0.21-1
@@ -54,24 +54,24 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gstreamer010-plugins-base-0.10.19-X-src.tar.bz2
+  unpack gstreamer010-plugins-base-0.10.20-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gstreamer010-plugins-base-0.10.19-X.cygport all
+  cygport ./gstreamer010-plugins-base-0.10.20-X.cygport all
 
 This will create:
-  /usr/src/gstreamer010-plugins-base-0.10.19-X-src.tar.bz2
-  /usr/src/gstreamer010-plugins-base-0.10.19-X.tar.bz2
-  /usr/src/gstreamer010-plugins-base-devel-0.10.19-X.tar.bz2
-  /usr/src/gstreamer010-plugins-cdparanoia-0.10.19-X.tar.bz2
-  /usr/src/gstreamer010-plugins-gnome_vfs-0.10.19-X.tar.bz2
-  /usr/src/gstreamer010-plugins-libvisual-0.10.19-X.tar.bz2
-  /usr/src/gstreamer010-plugins-ogg-0.10.19-X.tar.bz2
-  /usr/src/gstreamer010-plugins-pango-0.10.19-X.tar.bz2
-  /usr/src/gstreamer010-plugins-theora-0.10.19-X.tar.bz2
-  /usr/src/gstreamer010-plugins-vorbis-0.10.19-X.tar.bz2
-  /usr/src/gstreamer010-plugins-ximage-0.10.19-X.tar.bz2
+  /usr/src/gstreamer010-plugins-base-0.10.20-X-src.tar.bz2
+  /usr/src/gstreamer010-plugins-base-0.10.20-X.tar.bz2
+  /usr/src/gstreamer010-plugins-base-devel-0.10.20-X.tar.bz2
+  /usr/src/gstreamer010-plugins-cdparanoia-0.10.20-X.tar.bz2
+  /usr/src/gstreamer010-plugins-gnome_vfs-0.10.20-X.tar.bz2
+  /usr/src/gstreamer010-plugins-libvisual-0.10.20-X.tar.bz2
+  /usr/src/gstreamer010-plugins-ogg-0.10.20-X.tar.bz2
+  /usr/src/gstreamer010-plugins-pango-0.10.20-X.tar.bz2
+  /usr/src/gstreamer010-plugins-theora-0.10.20-X.tar.bz2
+  /usr/src/gstreamer010-plugins-vorbis-0.10.20-X.tar.bz2
+  /usr/src/gstreamer010-plugins-ximage-0.10.20-X.tar.bz2
 
 -------------------------------------------
 
@@ -129,14 +129,14 @@ Files included in the binary packages:
   /usr/lib/gstreamer-0.10/libgstvideoscale.la
   /usr/lib/gstreamer-0.10/libgstvideotestsrc.la
   /usr/lib/gstreamer-0.10/libgstvolume.la
-  /usr/share/doc/gstreamer010-plugins-base-0.10.19/ABOUT-NLS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.19/AUTHORS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.19/COPYING
-  /usr/share/doc/gstreamer010-plugins-base-0.10.19/COPYING.LIB
-  /usr/share/doc/gstreamer010-plugins-base-0.10.19/ChangeLog
-  /usr/share/doc/gstreamer010-plugins-base-0.10.19/INSTALL
-  /usr/share/doc/gstreamer010-plugins-base-0.10.19/NEWS
-  /usr/share/doc/gstreamer010-plugins-base-0.10.19/README
+  /usr/share/doc/gstreamer010-plugins-base-0.10.20/ABOUT-NLS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.20/AUTHORS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.20/COPYING
+  /usr/share/doc/gstreamer010-plugins-base-0.10.20/COPYING.LIB
+  /usr/share/doc/gstreamer010-plugins-base-0.10.20/ChangeLog
+  /usr/share/doc/gstreamer010-plugins-base-0.10.20/INSTALL
+  /usr/share/doc/gstreamer010-plugins-base-0.10.20/NEWS
+  /usr/share/doc/gstreamer010-plugins-base-0.10.20/README
   /usr/share/locale/af/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/az/LC_MESSAGES/gst-plugins-base-0.10.mo
   /usr/share/locale/bg/LC_MESSAGES/gst-plugins-base-0.10.mo
@@ -454,6 +454,9 @@ Files included in the binary packages:
 ------------------
 
 Port Notes:
+
+----- version 0.10.20-1 -----
+Version bump.
 
 ----- version 0.10.19-1 -----
 Version bump.
